syntax = "proto3";



service autopeering {
	rpc Next(NullMsg) returns (EventResponse);		
}

message NullMsg{

}

enum AutoPeerEventType{
	AddCollective = 0;
	RemoveCollective = 1;
	AddAdjunct = 2;
	RemoveAdjunct = 3;
	AddDrone = 4;
	RemoveDrone = 5;
} 

message AutoPeerEvent{
	AutoPeerEventType eventType = 1;	
	int64 seq = 2;
	int32 re = 3;
	oneof event {
		Collective collective = 4;
		Adjunct adjunct = 5;
		Drone drone = 6;
	};
}

message EventResponse{	
	repeated AutoPeerEvent events = 1;
}

message Collective{	
	string id = 1;
	string ip = 2;	
}

message Adjunct {	
	string id = 1;		
	string collectiveId = 2;		
}

message Drone {		
	string id = 1;
	string adjunct = 2;
	string direction = 3;			
}